--- a/frontend-client/src/index.css
+++ b/frontend-client/src/index.css
@@ -1,8 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@700&display=swap');
 
 body{
 background-color: var(--color-bg);
-font-family: 'Poppins', sans-serif;
+font-family: 'Poppins', 'sans-serif'; /*font-family property is inherited*/
 color: var(--color-white); /* color property is inherited: */
 }
 
