Made sure that error message is rendered correctly. Also styled the PrintInfoContainer class

--- a/frontend-client/src/Components/InputForm/InputForm.css
+++ b/frontend-client/src/Components/InputForm/InputForm.css
@@ -19,8 +19,13 @@
 .ErrorMessageContainer{
     font-size: 12px;
     font-weight: 500;
-    
 }
+.PrintInfoContainer{
+    font-size: 14px;
+    font-weight: 410; 
+}
+
+
 
 
 
