Changes made to footer component
Changes made to footer component to make sure that it expands downwards till the end of <bodY> element.
Made changes to make sure that the icons/options in the footer section are rendered in the center of the footer section

--- a/frontend-client/src/App.css
+++ b/frontend-client/src/App.css
@@ -1,3 +1,19 @@
+.AppContainer{
+  display:flex;
+  flex-direction: column;
+  min-height: 100vh;
+  border: solid 
+}
+.FooterWrapper{
+  position: relative;
+  flex-grow: 1; 
+  padding: 0;
+  border: solid purple;
+  display: flex;
+  flex-direction: column;
+  margin-top: 3em;
+}
+
 .App {
   text-align: center;
 }
