--- a/frontend-client/src/Components/Footer/Footer.css
+++ b/frontend-client/src/Components/Footer/Footer.css
@@ -1,17 +1,24 @@
 .FooterContainer{
+    position: relative;
     background-image: url(../../Pictures/anthony-tuil-crop.jpg);
     background-position: center;
+    height: 100%;
+    width: 100%; 
     background-size: 100% 100%;
-    height: 6em;
-    margin-top: 3em;
+    border: solid green;
+    flex-grow: 1;
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
+
 }
-.FooterFlexContainer{
+.FooterFlexContainer{ 
     display: flex;
     flex-direction: row; 
     justify-content: space-around;
     color: goldenrod;
     position: relative;
-    top: 40%;
+    top: 35%; 
 }
 .MailIcon{
     color: goldenrod;
